--- a/.atomist.yml
+++ b/.atomist.yml
@@ -16,3 +16,21 @@ editor:
     - "follower": "bananacakes"
     - "featureName": "SpringBoot.Structure"
 
+---
+kind: "operation"
+client: "com.atomist:rug"
+version: "1.0.0-20170728065612"
+editor:
+  name: "AddFeatureFollowerEditor"
+  group: "atomist"
+  artifact: "spring-team-handlers"
+  version: "0.7.10"
+  origin:
+    repo: "git@github.com:atomisthq/spring-team-handlers.git"
+    branch: "175d5b082a8c2a03252f2f08110ed9ff6d8f0374"
+    sha: "175d5b0"
+  parameters:
+    - "broadcaster": "spring-rest-seed"
+    - "follower": "spildrazil"
+    - "featureName": "SpringBoot.Structure"
+
